--- a/MTN French Conjugator/AboutPage.xaml
+++ b/MTN French Conjugator/AboutPage.xaml
@@ -44,7 +44,7 @@
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" x:Name="appBar" Opacity="0.5" BackgroundColor="#00000000">
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" x:Name="appBar" Opacity="0.795" BackgroundColor="{StaticResource PhoneAccentColor}" ForegroundColor="White">
             <shell:ApplicationBarIconButton IconUri="/Images/appbar.questionmark.rest.png" Text="Help" Click="btnHelp_Click" x:Name="btnHelp" />
             <shell:ApplicationBarIconButton IconUri="/Images/appbar.refresh.rest.png" Text="Refresh" x:Name="btnRefresh" />
             <shell:ApplicationBar.MenuItems>
