modified:   Bin/Debug/French Conjugator.dll 	modified:   Bin/Debug/French Conjugator.pdb 	modified:   Bin/Debug/French Conjugator_Debug_AnyCPU.xap 	modified:   Bin/Debug/MDIL/French Conjugator.dll 	modified:   French Conjugator.v12.suo 	modified:   French Conjugator.vbproj 	modified:   FrenchAppBackground.png 	modified:   MainPage.xaml.vb 	modified:   ReportPage.xaml 	deleted:    ScreenCapFive.png 	deleted:    ScreenCapFour.png 	deleted:    ScreenCapOne.png 	deleted:    ScreenCapSix.png 	deleted:    ScreenCapThree.png 	deleted:    ScreenCapTwo.png 	modified:   SuggestPage.xaml 	modified:   Thumbs.db 	modified:   obj/Debug/DesignTimeResolveAssemblyReferences.cache 	modified:   obj/Debug/French Conjugator.dll 	modified:   obj/Debug/French Conjugator.g.resources 	modified:   obj/Debug/French Conjugator.pdb 	modified:   obj/Debug/French Conjugator.vbprojResolveAssemblyReference.cache 	modified:   obj/Debug/MDIL/French Conjugator.dll 	modified:   obj/Debug/MDILCacheFile.xml 	modified:   obj/Debug/ReportPage.g.i.vb 	modified:   obj/Debug/ReportPage.g.vb 	modified:   obj/Debug/SuggestPage.g.i.vb 	modified:   obj/Debug/SuggestPage.g.vb 	modified:   obj/Debug/XapCacheFile.xml 	new file:   packages/repositories.config

--- a/MTN French Conjugator inDev/ReportPage.xaml
+++ b/MTN French Conjugator inDev/ReportPage.xaml
@@ -19,9 +19,12 @@
             <GradientStop Color="#FF697FF2" Offset="1" />
         </LinearGradientBrush>
     </phone:PhoneApplicationPage.Resources>
-    
+
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot">
+        <Grid.Background>
+            <ImageBrush Stretch="UniformToFill" ImageSource="/Images/background.png"/>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -35,11 +38,11 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <TextBox Height="482" HorizontalAlignment="Left" Margin="6,0,0,0" Name="txtReport" Text="Enter your bug report here." VerticalAlignment="Top" Width="444" />
-            <Button Content="Send" Height="72" HorizontalAlignment="Left" Margin="12,529,0,0" Name="btnSendReport" VerticalAlignment="Top" Width="438" Foreground="{StaticResource Foreground1}" BorderBrush="{StaticResource Foreground1}" />
+            <TextBox Height="482" HorizontalAlignment="Left" Name="txtReport" Text="Enter your bug report here." VerticalAlignment="Top" Width="456" />
+            <Button Content="Send" Height="72" HorizontalAlignment="Left" Margin="0,529,0,0" Name="btnSendReport" VerticalAlignment="Top" Width="456" Foreground="{StaticResource Foreground1}" BorderBrush="{StaticResource Foreground1}" />
         </Grid>
     </Grid>
- 
+
     <!--Sample code showing usage of ApplicationBar-->
     <!--<phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
