--- a/MTN French Conjugator inDev/MainPage.xaml
+++ b/MTN French Conjugator inDev/MainPage.xaml
@@ -6,13 +6,14 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    toolkit:TiltEffect.IsTiltEnabled="True"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True" Name="pageMain" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit">
-
+    
     <phone:PhoneApplicationPage.Resources>
         <LinearGradientBrush x:Key="Foreground1" EndPoint="1,0.5" StartPoint="0,0.5">
             <GradientStop Color="Red" Offset="0" />
@@ -27,7 +28,7 @@
     <phone:PhoneApplicationPage.Background>
         <ImageBrush Stretch="Fill" ImageSource="/Images/background.png"/>
     </phone:PhoneApplicationPage.Background>
-
+    
 
 
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -61,7 +62,7 @@
                 <ListBoxItem Content="Elles/Ils" BorderThickness="3" Name="listElles" FontSize="26" Margin="10,26,0,0" />
             </ListBox>
 
-            <Button Content="Conjugate" Height="72" HorizontalAlignment="Left" Margin="-12,429,0,0" Name="btnConjugate" VerticalAlignment="Top" Width="480" BorderBrush="{StaticResource PhoneAccentBrush}" Background="{x:Null}" />
+            <Button Content="Conjugate" Height="72" HorizontalAlignment="Left" Margin="-12,429,0,0" Name="btnConjugate" VerticalAlignment="Top" Width="480" BorderBrush="{StaticResource PhoneAccentBrush}" Background="{x:Null}" toolkit:TiltEffect.SuppressTilt="false" />
             <ListBox Height="261" Margin="228,162,6,184" Name="listVerbTense" Width="222" BorderThickness="3" >
                 <ListBoxItem Content="Present"  BorderThickness="3" Margin="10,26,0,0" IsSelected="True" FontSize="26" Name="listPresent" />
                 <ListBoxItem Content="Past"  BorderThickness="3" Margin="10,26,0,0" FontSize="26" Name="listPast" IsEnabled="True" />
