modified:   Bin/Release/AppManifest.xaml 	modified:   Bin/Release/ApplicationIcon.png 	modified:   Bin/Release/Background.png 	modified:   Bin/Release/French Conjugator.dll 	modified:   Bin/Release/French Conjugator.pdb 	modified:   Bin/Release/French Conjugator.xml 	new file:   Bin/Release/French Conjugator_Release_AnyCPU.xap 	new file:   Bin/Release/MDIL/Coding4Fun.Toolkit.Controls.dll 	new file:   Bin/Release/MDIL/French Conjugator.dll 	new file:   Bin/Release/MDIL/Microsoft.Expression.Controls.dll 	new file:   Bin/Release/MDIL/Microsoft.Expression.Drawing.dll 	new file:   Bin/Release/MDIL/Microsoft.Expression.Interactions.dll 	new file:   Bin/Release/MDIL/Microsoft.Phone.Controls.Toolkit.dll 	new file:   Bin/Release/MDIL/Microsoft.Phone.Controls.dll 	new file:   Bin/Release/MDIL/System.Windows.Interactivity.dll 	new file:   Bin/Release/MDIL/WMAppManifest.xml 	new file:   Bin/Release/Microsoft.Expression.Controls.dll 	new file:   Bin/Release/Microsoft.Expression.Drawing.dll 	new file:   Bin/Release/Microsoft.Expression.Interactions.dll 	modified:   Bin/Release/Microsoft.Phone.Controls.dll 	new file:   Bin/Release/My Project/WMAppManifest.xml 	new file:   Bin/Release/System.Windows.Interactivity.dll 	new file:   Bin/Release/de/Microsoft.Expression.Interactions.resources.dll 	new file:   Bin/Release/de/System.Windows.Interactivity.resources.dll 	new file:   Bin/Release/en/Microsoft.Expression.Interactions.resources.dll 	new file:   Bin/Release/en/System.Windows.Interactivity.resources.dll 	new file:   Bin/Release/es/Microsoft.Expression.Interactions.resources.dll 	new file:   Bin/Release/es/System.Windows.Interactivity.resources.dll 	new file:   Bin/Release/fr/Microsoft.Expression.Interactions.resources.dll 	new file:   Bin/Release/fr/System.Windows.Interactivity.resources.dll 	new file:   Bin/Release/it/Microsoft.Expression.Interactions.resources.dll 	new file:   Bin/Release/it/System.Windows.Interactivity.resources.dll 	new file:   Bin/Release/ja/Microsoft.Expres

--- a/MTN French Conjugator inDev/MainPage.xaml
+++ b/MTN French Conjugator inDev/MainPage.xaml
@@ -63,7 +63,7 @@
             </ListBox>
 
             <Button Content="Conjugate" Height="72" HorizontalAlignment="Left" Margin="-12,429,0,0" Name="btnConjugate" VerticalAlignment="Top" Width="480" BorderBrush="{StaticResource PhoneAccentBrush}" Background="{x:Null}" toolkit:TiltEffect.SuppressTilt="false" />
-            <ListBox Height="261" Margin="228,162,6,184" Name="listVerbTense" Width="222" BorderThickness="3" >
+            <ListBox Height="261" Margin="228,162,6,184" Name="listVerbTense" Width="222" BorderThickness="3" RenderTransformOrigin="0.5,0.5" >
                 <ListBoxItem Content="Present"  BorderThickness="3" Margin="10,26,0,0" IsSelected="True" FontSize="26" Name="listPresent" />
                 <ListBoxItem Content="Past"  BorderThickness="3" Margin="10,26,0,0" FontSize="26" Name="listPast" IsEnabled="True" />
                 <ListBoxItem Content="Imperfect Past" BorderThickness="3" Margin="10,26,0,0" FontSize="26" Name="ListImperfectPast" />
