modified:   ../MTN French Conjugator inDev/AboutPage.xaml 	modified:   ../MTN French Conjugator inDev/Bin/Release/French Conjugator.dll 	modified:   ../MTN French Conjugator inDev/Bin/Release/French Conjugator.pdb 	modified:   ../MTN French Conjugator inDev/Bin/Release/French Conjugator_Release_AnyCPU.xap 	modified:   ../MTN French Conjugator inDev/Bin/Release/MDIL/French Conjugator.dll 	modified:   ../MTN French Conjugator inDev/Bin/Release/MDIL/WMAppManifest.xml 	modified:   ../MTN French Conjugator inDev/French Conjugator.v12.suo 	modified:   ../MTN French Conjugator inDev/MainPage.xaml 	modified:   ../MTN French Conjugator inDev/MainPage.xaml.vb 	modified:   ../MTN French Conjugator inDev/obj/Release/AboutPage.g.i.vb 	modified:   ../MTN French Conjugator inDev/obj/Release/AboutPage.g.vb 	modified:   ../MTN French Conjugator inDev/obj/Release/French Conjugator.dll 	modified:   ../MTN French Conjugator inDev/obj/Release/French Conjugator.g.resources 	modified:   ../MTN French Conjugator inDev/obj/Release/French Conjugator.pdb 	modified:   ../MTN French Conjugator inDev/obj/Release/MDIL/French Conjugator.dll 	modified:   ../MTN French Conjugator inDev/obj/Release/MDILCacheFile.xml 	modified:   ../MTN French Conjugator inDev/obj/Release/MainPage.g.i.vb 	modified:   ../MTN French Conjugator inDev/obj/Release/MainPage.g.vb 	modified:   ../MTN French Conjugator inDev/obj/Release/XapCacheFile.xml

--- a/MTN French Conjugator inDev/AboutPage.xaml
+++ b/MTN French Conjugator inDev/AboutPage.xaml
@@ -20,7 +20,7 @@
         </LinearGradientBrush>
     </phone:PhoneApplicationPage.Resources>
     <phone:PhoneApplicationPage.Background>
-        <ImageBrush Stretch="UniformToFill" ImageSource="/Images/background.png"/>
+        <ImageBrush Stretch="UniformToFill" ImageSource="/Images/background.png" x:Name="picBack"/>
     </phone:PhoneApplicationPage.Background>
 
     <!--LayoutRoot is the root grid where all page content is placed-->
